# onlinepoker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
client/: CMakeLists.txt
client/include/: client.h  poker.h  table.h
client/src/: client.cpp  poker.cpp  table.cpp  tictactoe.cpp
include/: somegame.h
poker/: CMakeLists.txt
poker/include/: poker.h  table.h
poker/src/: poker.cpp  table.cpp
server/: CMakeLists.txt
server/include/: server.h  server_old.h
server/src/: server.cpp  server_old.cpp  server_threaded.cpp
src/: somegame.cpp
src/client/: client.cpp
src/server/: server.cpp
tests/: CMakeLists.txt  test_poker.cpp  test_table.cpp
